WebAppClient/kuber/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grpc-client-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: grpc-client
  template:
    metadata:
      labels:
        app: grpc-client
    spec:
      containers:
      - name: grpc-client-instance
        image: hv86/grpc-client:1.0.1
        resources:
          limits:
            memory: "256Mi"
        ports:
        - containerPort: 80
