WebAppClient/kuber/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-cli
spec:
  selector:
    app: grpc-client
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
